--- a/src/main/resources/templates/fragments/empleado/empleadoshowcons.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshowcons.html
@@ -407,10 +407,10 @@
                                                                 <thead>
                                                                     <tr>
                                                                         <th>Codigo</th>
-                                                                        <th>Institucion</th>
+                                                                        <th>Nombre Institucion</th>
                                                                         <th>Fecha Desde</th>
                                                                         <th>Fecha Hasta</th>
-                                                                        <th>Salario</th>
+                                                                        <th>Salario Inicial</th>
                                                                         <th>Sector</th>
                                                                         <th>Detalle</th>
                                                                     </tr>
@@ -499,7 +499,7 @@
                                                                         <th>Codigo</th>
                                                                         <th>Fecha de Inicio de Contrato</th>
                                                                         <th>Fecha de Fin de Contrato</th>
-                                                                        <th>Salario</th>
+                                                                        <th>Salario Actual</th>
                                                                         <th>Detalle</th>
                                                                     </tr>
                                                                 </thead>
