--- a/src/main/resources/templates/fragments/experiencialaboral/experienciaform.html
+++ b/src/main/resources/templates/fragments/experiencialaboral/experienciaform.html
@@ -146,7 +146,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Salario Inicial(*):</label>
                     <div class="col-sm-2">
-                        <input type="text" class="form-control num_decimal"  required="true" maxlength="9"    th:field="*{salarioinicial}" />
+                        <input type="text" class="form-control num_decimal3 numeros"  required="true" maxlength="10"    th:field="*{salarioinicial}" />
                     </div>
                      <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup7')" onmouseout ="javascript:ocultarAyuda('poppup7')">a</a></b>
@@ -157,7 +157,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Salario Final(*):</label>
                     <div class="col-sm-2">
-                        <input type="text" class="form-control num_decimal"  required="true" maxlength="9"     th:field="*{salariofinal}" />
+                        <input type="text" class="form-control num_decimal3 numeros"  required="true" maxlength="10"     th:field="*{salariofinal}" />
                     </div>
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup3')" onmouseout ="javascript:ocultarAyuda('poppup3')">a</a></b>
