--- a/src/main/resources/templates/fragments/mision/asignarmisionform.html
+++ b/src/main/resources/templates/fragments/mision/asignarmisionform.html
@@ -108,7 +108,7 @@
                 type: "success",
                 icon: "success"
        }).then(function() {
-                location.href = '../../../';
+                location.href = '../../../list/mision';
        }); 
 }
     
