--- a/src/main/resources/templates/fragments/mision/misionempshow.html
+++ b/src/main/resources/templates/fragments/mision/misionempshow.html
@@ -102,7 +102,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 type: "success",
                 icon: "success",
        }).then(function() {
-                location.href = '../../../list/mision';
+                location.href = '../list/mision';
        }); 
 }
     
