--- a/src/main/resources/templates/fragments/contacto/contactos.html
+++ b/src/main/resources/templates/fragments/contacto/contactos.html
@@ -49,6 +49,41 @@
 <script th:inline="javascript">
 
     $(document).ready(function () {
+    if ([[${msg}]] === 0){
+
+    swal({
+    title: "Exito!",
+            text: "Registro agregado correctamente",
+            type: "success",
+            icon: "success"
+            }).then(function() {
+    location.href = '../../empleados/show/'+ [[${empleado}]];
+    });
+    }
+    if ([[${msg}]] === 2){
+
+    swal({
+    title: "Exito!",
+            text: "Registro agregado correctamente",
+            type: "success",
+            icon: "success"
+            }).then(function() {
+    location.href = '../../../empleados/show/'+ [[${empleado}]];
+    });
+    }
+    
+    if ([[${msg}]] === 1){
+    swal({
+    title: "ERROR!",
+            text: "Ocurrio un error en el proceso",
+            type: "error",
+            icon: "error"
+            });
+    }
+    });</script> 
+<script th:inline="javascript">
+
+    $(document).ready(function () {
     if ([[${msg}]] === 3){
 
     swal({
