--- a/src/main/resources/templates/fragments/empleado/empleadoform.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoform.html
@@ -339,7 +339,7 @@
                 <label class="col-sm-3 control-label">Fecha de Ingreso al Sector Publico (*):</label>
                 <div class="col-sm-2">
                     
-                     <input class="form-control fecha_format" type="text"   placeholder="dia/mes/año" name="fechasepu" id="fechasepu" th:field="*{fechaingresosecpub}" onchange="isDat(this.value,'fechasepu')" />
+                     <input class="form-control fecha_format" type="text"   placeholder="dia/mes/año" name="fechasepu" id="fechasepu" th:field="*{fechaingresosecpub}"  onchange="isDat(this.value,'fechasepu');Fechas(this.value,$('#fechamin').val().toString(),'fechasepu','fechamin')" />
                 </div>
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup19')" onmouseout ="javascript:ocultarAyuda('poppup19')">a</a></b>
@@ -361,7 +361,7 @@
                    <div class="form-group">
                 <label class="col-sm-3 control-label">Fecha de Ingreso al Ministerio(*):</label>
                 <div class="col-sm-2">
-                     <input class="form-control fecha_format" type="text"  name="fechamin" id="fechamin"  th:field="*{fechaingresoministerio}" onchange="isDat(this.value,'fechamin')" />
+                     <input class="form-control fecha_format" type="text"  name="fechamin" id="fechamin"  th:field="*{fechaingresoministerio}" onchange="isDat(this.value,'fechamin');Fechas($('#fechasepu').val().toString(),this.value,'fechasepu','fechamin')" />
                 </div>
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup21')" onmouseout ="javascript:ocultarAyuda('poppup21')">a</a></b>
