--- a/src/main/resources/templates/fragments/empleado/empleadoshow.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshow.html
@@ -512,10 +512,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<thead>
 															<tr >
 															<th>Codigo</th>
-															<th>Institucion</th>
+															<th>Nombre Institucion</th>
 															<th>Fecha Desde</th>
 															<th>Fecha Hasta</th>
-															<th>Salario</th>
+															<th>Salario Inicial</th>
 															<th>Sector</th>
 															<th></th>
 															<th></th>
@@ -638,7 +638,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<th>Codigo</th>
 															<th>Fecha de Inicio de Contrato</th>
                                                                                                                         <th>Fecha de Fin de Contrato</th>
-															<th>Salario</th>
+															<th>Salario Actual</th>
 															<th></th>
 															<th></th>
 															<th></th>
