--- a/src/main/resources/templates/fragments/formacionacademica/formacionacademicas.html
+++ b/src/main/resources/templates/fragments/formacionacademica/formacionacademicas.html
@@ -173,6 +173,40 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 		    });
 		});
 	</script>
+        <script th:inline="javascript">
+
+    $(document).ready(function () {
+    if ([[${msg}]] === 0){
+//alert(document.getElementById("codem").value);
+    swal({
+    title: "Exito!",
+            text: "Registro agregado correctamente",
+            type: "success",
+            icon: "success"
+            }).then(function() {
+    location.href = '../../empleados/show/'+ [[${empleado}]];
+    });
+    }
+if ([[${msg}]] === 2){
+
+    swal({
+    title: "Exito!",
+            text: "Registro agregado correctamente",
+            type: "success",
+            icon: "success"
+            }).then(function() {
+    location.href = '../../../empleados/show/'+ [[${empleado}]];
+    });
+    }
+    if ([[${msg}]] === 1){
+    swal({
+    title: "ERROR!",
+            text: "Ocurrio un error en el proceso",
+            type: "error",
+            icon: "error"
+            });
+    }
+    });</script> 
 <script th:inline="javascript">
 
     $(document).ready(function () {
