--- a/src/main/resources/templates/fragments/capacitador/capacitadores.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadores.html
@@ -1,164 +1,145 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
-    <title>Listado de Capacitadores</title>
+    <head lang="en">
+        <title>Listado de Capacitadores</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-<!--          <div class="contenedorizq"> 
-    <label  class="der">
-    <script >
-var f = new Date();
-document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
-</script></label>
-</div>-->
-<div class="row">
-        
+    <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-9">
-               
-          <div class="row text-center">
-                        <img src="../../static/image/capacitador.png" width="75" th:src="@{/image/capacitador.png}"/>
-                         </div>
+            <div class="row text-center">
+                <img src="../../static/image/capacitador.png" width="75" th:src="@{/image/capacitador.png}"/>
+            </div>
             <br>
-          
-   
-    <div th:if="${not #lists.isEmpty(capacitadores)}">
-        <!--<h3 align="center">Listado de Capacitadores</h3>-->
-       <table id="tablita" class="table table-striped table-bordered" >
-            
-            <thead>
-            <tr>
-                <th>Codigo Capacitador</th>
-                <th>Responsable del Capacitador</th>
-                <th>Nombre de Capacitador</th>
-                <th>Tema Dominio</th>
-                <th>Institución que Pertenece Capacitador</th>
-                <th>Tipo Capacitador</th>
-                <th>Tipo Agrupación</th>
-                  <th>Dui Capacitador</th>
-                  <th>Nit Capacitador</th>
-                  <th>Carnet Residente</th>
-                  <th>Telefono Fijo Capacitador</th>
-                  <th> Telefono Movil Capacitador</th>
-                  <th>Email Capacitador</th>
-<!--                  <th>Codigo Empleado</th>-->
-                    <th></th>
-                    <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
-                    <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
-            </tr>
-            <!-- para que funcione la busqueda debe llevar un head y los th-->
-            </thead>//
-            <tr th:each="capacitador : ${capacitadores}">
-                <td th:text="${capacitador.codigocapacitador}">Código</td>
-                 <td th:text="${capacitador.codigoempleado.nombreempleado}">Codigo</td>
-                
-                <td th:text="${capacitador.nombrecapacitador}">Nombre</td>
-                <td th:text="${capacitador.temadominio}">Tema</td>
-                <td th:text="${capacitador.institucioncapacitador}">Institución</td>
-                <td th:text="${capacitador.tipocapacitador}">Tipo Capacitador</td>
-                 <td th:text="${capacitador.tipoagrupacion}">Tipo Agrupación</td>
-                <td th:text="${capacitador.duicapacitador}">Dui</td>
-                <td th:text="${capacitador.nitcapacitador}">Nit</td>
-                <td th:text="${capacitador.carnetresidencia}">Carnet</td>
-                <td th:text="${capacitador.telefonocapacitador}">Telefono</td>
-                <td th:text="${capacitador.telefonomovilcapacitador}">Movil</td>
-                <td th:text="${capacitador.emailcapacitador}">Email</td>
-<!--                <td th:text="${capacitador.codigoempleado.codigoempleado}">Email</td>-->
-                
-                
-                      <!--<a th:href="${'./new/capacitador'}" class="btn btn-primary">Nuevo</a>-->
-                   <td> <a th:href="${'./show/' + capacitador.codigocapacitador}" class="btn btn-info">Mostrar</a> </td>
-               <td> <a th:href="${'./edit/' + capacitador.codigocapacitador}" class="btn btn-success">Editar</a> </td>
-              <td>   <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${capacitador.codigocapacitador} + '\');'" >Eliminar</a></td>
-                <!--<a th:href="${'./delete/' + capacitador.codigocapacitador}" class="btn btn-danger">Delete</a>-->
-               
-            </tr>
-        </table>
+            <div th:if="${not #lists.isEmpty(capacitadores)}">
+                <table id="tablita" class="table table-striped table-bordered" >
+                    <thead>
+                        <tr>
+                            <th>Codigo Capacitador</th>
+                            <th>Estado Capacitador</th>
+                            <th>Responsable del Capacitador</th>
+                            <th>Nombre de Capacitador</th>
+                            <th>Tema Dominio</th>
+                            <th>Institución que Pertenece Capacitador</th>
+                            <th>Tipo Capacitador</th>
+                            <th>Tipo Agrupación</th>
+                            <th>Dui Capacitador</th>
+                            <th>Nit Capacitador</th>
+                            <th>Carnet Residente</th>
+                            <th>Telefono Fijo Capacitador</th>
+                            <th> Telefono Movil Capacitador</th>
+                            <th>Email Capacitador</th>
+                            <!--                  <th>Codigo Empleado</th>-->
+                            <th></th>
+                            <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+                            <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
+                        </tr>
+                        <!-- para que funcione la busqueda debe llevar un head y los th-->
+                    </thead>
+                    <tr th:each="capacitador : ${capacitadores}">
+
+                        <td th:text="${capacitador.codigocapacitador}">Código</td>
+                        <td th:text="${capacitador.estadocapacitador}?'Activo':'Inactivo'">Estado</td>
+                        <td th:text="${capacitador.codigoempleado.nombreempleado}">Codigo</td>
+                        <td th:text="${capacitador.nombrecapacitador}">Nombre</td>
+                        <td th:text="${capacitador.temadominio}">Tema</td>
+                        <td th:text="${capacitador.institucioncapacitador}">Institución</td>
+                        <td th:text="${capacitador.tipocapacitador}">Tipo Capacitador</td>
+                        <td th:text="${capacitador.tipoagrupacion}">Tipo Agrupación</td>
+                        <td th:text="${capacitador.duicapacitador}">Dui</td>
+                        <td th:text="${capacitador.nitcapacitador}">Nit</td>
+                        <td th:text="${capacitador.carnetresidencia}">Carnet</td>
+                        <td th:text="${capacitador.telefonocapacitador}">Telefono</td>
+                        <td th:text="${capacitador.telefonomovilcapacitador}">Movil</td>
+                        <td th:text="${capacitador.emailcapacitador}">Email</td>
+                        <td> <a th:href="${'./show/' + capacitador.codigocapacitador}" class="btn btn-info">Mostrar</a> </td>
+                        <td> <a th:if="${capacitador.estadocapacitador} == 1" th:href="${'./edit/' + capacitador.codigocapacitador}" class="btn btn-success">Editar</a> </td>
+                        <td> <a  th:if="${capacitador.estadocapacitador} == 1" class="btn btn-danger" th:onclick="'eliminar(\'' + ${capacitador.codigocapacitador} + '\');'" >Eliminar</a></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+
     </div>
-</div>
-    
+    <div class="col-md-12">
+        <th:block th:include="../templates/footer"></th:block>
     </div>
-       <div class="col-md-12">
-                    <th:block th:include="../templates/footer"></th:block>
-                </div>
-  
-  <script th:inline="javascript">
-      Textheader('pnt_ccap',document.title);
-    $(document).ready(function () {
-        
-    if([[${msg}]]===0){
-       swal({
-                title: "Exito!",
+
+    <script th:inline="javascript">
+        Textheader('pnt_ccap', document.title);
+        $(document).ready(function () {
+
+        if ([[${msg}]] === 0){
+        swal({
+        title: "Exito!",
                 text: "Registro agregado correctamente",
                 type: "success",
                 icon: "success"
-       }).then(function() {
-                location.href = '../comites/';
-       }); 
-}
-    
-    if([[${msg}]]===1){
+        }).then(function() {
+        location.href = '../comites/';
+        });
+        }
+
+        if ([[${msg}]] === 1){
         swal({
-                title: "ERROR!",
+        title: "ERROR!",
                 text: "Ocurrio un error en el proceso",
                 type: "error",
                 icon: "error"
-       });
-    }
-    });
-</script> 
- <script th:inline="javascript">
-      $(document).ready(function () {//funcion para realizar busquedas en pantallad de consulta
-            $('#tablita').DataTable( {
+        });
+        }
+        });
+    </script> 
+    <script th:inline="javascript">
+        $(document).ready(function () {//funcion para realizar busquedas en pantallad de consulta
+        $('#tablita').DataTable({
         "language": {
-            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
-        }} );
-    });
-	</script>
- <script th:inline="javascript">
+        "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+        }});
+        });
+    </script>
+    <script th:inline="javascript">
         $(document).ready(function () {
-    if([[${msg}]]===3){
-       swal({
-           
-                title: "Exito!",
+        if ([[${msg}]] === 3){
+        swal({
+
+        title: "Exito!",
                 text: "Registro Eliminado correctamente",
                 type: "success",
                 icon: "success",
-       }).then(function() {
-                location.href = '../../comites/';
-       }); 
-}
-    
-    if([[${msg}]]===4){
+        }).then(function() {
+        location.href = '../../comites/';
+        });
+        }
+
+        if ([[${msg}]] === 4){
         swal({
-                title: "ERROR!",
+        title: "ERROR!",
                 text: "Ocurrio un error al eliminar el registro",
                 type: "error",
                 icon: "error"
-       });
-    }
-    });
-        
+        });
+        }
+        });
         function eliminar(id) {
-            swal({
-                title: "Desea Eliminar?",
+        swal({
+        title: "Desea Eliminar?",
                 text: "Favor confirme que desea eliminar este registro!",
                 icon: "warning",
                 buttons: true,
                 dangerMode: true,
-            })
-                    .then((willDelete) => {
-                        if (willDelete) {
-                            location.href = './delete/' + id;
-                        } else {
-                            swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
-                        }
-                    });
+        })
+                .then((willDelete) => {
+                if (willDelete) {
+                location.href = './delete/' + id;
+                } else {
+                swal("Accion cancelada", "Se ha cancelado la operacion de eliminado", "error");
+                }
+                });
         }
     </script>
 </body>
-
 </html>
