--- a/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
@@ -102,6 +102,12 @@
                         <p class="" th:text="${capacitador.emailcapacitador}">Correo Electronico</p>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">Estado Capacitador:</label>
+                    <div class="col-sm-8">
+                        <p class="" th:text="${capacitador.estadocapacitador}?'Activo':'Inactivo'" >Estado Capacitador</p>
+                    </div>
+                </div>
                              
               
             </form>
