--- a/src/main/resources/templates/fragments/capacitador/show.html
+++ b/src/main/resources/templates/fragments/capacitador/show.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-
-        <title>SISADMRH-Detalle de comites</title>
+        <title>SISADMRH-Detalle de capacitadores</title>
     <th:block th:include="../templates/header"></th:block>
-
-
-
 </head>
 <body>
   <div class="row">
@@ -88,6 +84,12 @@
                     <label class="col-sm-2 control-label">Correo Electronico:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${capacitador.emailcapacitador}">Correo Electronico</p>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">estado de capacitador:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${capacitador.estadocapacitador}">Correo Electronico</p>
                     </div>
                 </div>
                 <!--                 <div class="form-group">
