--- a/src/main/resources/templates/fragments/beneficio/beneficiosreport.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficiosreport.html
@@ -34,12 +34,12 @@
                      <div class="form-group">    
                         <label class="col-sm-3 control-label">Fecha Inicial:</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control" id="fechainicial" name="fechainicial"/>
-                        </div>
+                    <input class="form-control fecha_format" placeholder="dia/mes/año" type="text"  name="fechafinal" id="fechafinal" onchange="isDat(this.value,'fechafinal');Fechas($('#fechainicial').val().toString(),this.value,'fechainicial','fechafinal')" />
+                         </div>
                         <label class="col-sm-2 control-label">Fecha Final:</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control" id="fechafinal" name="fechafinal"/>
-                        </div>
+                    <input class="form-control fecha_format" placeholder="dia/mes/año" type="text"  name="fechafinal" id="fechafinal" onchange="isDat(this.value,'fechafinal');Fechas($('#fechainicial').val().toString(),this.value,'fechainicial','fechafinal')" />
+                         </div>
                     </div>
                       <div class="row" align="center">    
                          <td><a class="btn btn-danger" id="generar">PDF</a></td>
@@ -55,13 +55,26 @@
     </div>
 </body>
 <script>
+function Fechas(val1,val2,val3,val4){
+    var foo=ValidarFechaReporte(val1,val2,val3,val4).split(",");;
+    if(foo[0]!==foo[2]){
+        swal(foo[1], foo[0]);
+        }
+    }
+                    
+function isDat(val,id){
+    var foo=ExisteFecha(val,id).split(",");
+    if(foo[0]!==foo[2]){
+        swal(foo[1], foo[0]);
+    }
+    }
     $(document).ready(function () {
         $('#fechainicial').datepicker({
-            dateFormat: 'dd-mm-yy'
+            dateFormat: 'dd/mm/yy'
         });
 
         $('#fechafinal').datepicker({
-            dateFormat: 'dd-mm-yy'
+            dateFormat: 'dd/mm/yy'
         });
         $('#generar').click(function(){
             $("#formbeneficio").attr('action', '../pdf/'+ $("#codigo").val().toString());
