read only a usuario primer ingreso

--- a/src/main/resources/templates/passform.html
+++ b/src/main/resources/templates/passform.html
@@ -76,7 +76,7 @@
                             <label class="col-sm-3 control-label"></label>
                             <label class="col-sm-2 control-label">Usuario:</label>
                             <div class="col-sm-6">
-                                <input type="text" class="form-control letras" required="true" size="100" maxlength="50" th:field="*{nombreusuario}" />
+                                <input type="text" readonly class="form-control letras" required="true" size="100" maxlength="50" th:field="*{nombreusuario}" />
                             </div>
                             <div class="popup col-sm-1"><b>
                                     <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('nomUser')" onmouseout ="javascript:ocultarAyuda('nomUser')">a</a></b>
