--- a/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
@@ -30,7 +30,7 @@
                     <input type="hidden" th:field="*{codigocapacitacion}"/>
 
   <div class="form-group">
-                        <label class="col-sm-2 control-label">Nombre del apacitador(*):</label>
+                        <label class="col-sm-2 control-label">Nombre del Capacitador(*):</label>
                         <div class="col-sm-5">
                                                     <!--<input type="number" class="form-control" th:field="*{codigocapacitador.codigocapacitador}"/>-->
 
