--- a/src/main/resources/templates/fragments/beneficio/beneficioshow.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioshow.html
@@ -27,7 +27,7 @@
                         <p class="form-control-static" th:text="${beneficio.codigobeneficio}">Usuario Id</p></div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Nombre beneficio:</label>
+                    <label class="col-sm-2 control-label">Nombre Beneficio:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${beneficio.nombrebeneficio}">Nombre</p>
                     </div>
@@ -40,14 +40,14 @@
                 </div>
                 
                  <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha de inicio beneficio:</label>
+                    <label class="col-sm-2 control-label">Fecha de Inicio Beneficio:</label>
                     <div class="col-sm-10">
                          <p class="form-control-static" th:text="${#calendars.format(beneficio.fechainiciobeneficio, 'dd/MM/yyyy')}">Fecha fin</p>
                     </div>
                 </div>
                 
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha fin beneficio:</label>
+                    <label class="col-sm-2 control-label">Fecha Fin Feneficio:</label>
                     <div class="col-sm-10">
                          <p class="form-control-static" th:text="${#calendars.format(beneficio.fechafinalizarbeneficio, 'dd/MM/yyyy')}">Fecha fin</p>
                     </div>
